--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/auth": "^4.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,18 +12,18 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "amazon-cognito-identity-js": "^5.0.3",
     "aws-amplify": "^4.1.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "@types/react-redux": "^7.1.16",
-    "bootstrap": "^5.0.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
