--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use-password-validator": "^0.0.1",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
