--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
+    "@types/redux-mock-store": "^1.0.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
